--- a/#1Layaout.html
+++ b/#1Layaout.html
@@ -5,8 +5,9 @@
 <head>
     <!--Html de başlık etiket için-->
     <title> Tsb
+        
     </title>
-
+    
     <meta charset="UTF-8" />
     <meta name="keywords" content="java,Python,javascript,c#" />
     <meta name="description " content="free programing language">
@@ -17,10 +18,12 @@
     <!--Html de içerikler için-->
     <p>
     <h1 style="color:bisque;">Baslık1</h1>
-
-
     </p>
-
+    <pre>
+        bu pre baslığı 
+        ona 
+        göre
+    </pre>
 
 </body>
 
