--- a/htmlders1.html
+++ b/htmlders1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yeni Dosya</title>
-        
+
 </head>
 <body>
     <pre>
@@ -14,6 +14,9 @@
         yazıyor.
         <sub>
             bu alt metin
+            <sub>
+                güncellendi
+            </sub>
             <small>consectetur</small>
         </sub>
     </pre>
