--- a/Links.html
+++ b/Links.html
@@ -8,13 +8,16 @@
 </head>
 <body style="background-color: rgb(248, 241, 236);">
     <h1 style="color: brown;">Aşağıdaki Linklere Tıkla</h1>
-    <a href="http://www.google.com.tr", style="font-size: 20px;color: rgb(89, 0, 255);">Google'a gitmek için Tıklayın</a>
+    <a href="http://www.google.com.tr" style="font-size: 20px;color: rgb(89, 0, 255);">Google'a gitmek için Tıklayın</a>
     <hr>
-    <a href="http://www.youtube.com.tr", style="font-size: 20px; color: rgb(89, 0, 255);">youtube gitmek için tıklayın</a>
+    <a href="http://www.youtube.com.tr" style="font-size: 20px; color: rgb(89, 0, 255);">youtube gitmek için tıklayın</a>
     <hr>
     <a href="http://www.youtube.com.tr" target = "_blank" title="yeni sekmede açar"
     style="font-size: 20px; color: rgb(255, 187, 0);">youtube yeni sekmede gitmek için tıklayın</a>
-
+    <hr>
+    <a href="htmlders1.html" target="_blank" title="heading" style="color: black;
+    font-size: 20px;">local link açma</a>
+    
 
 </body>
 </html>
